--- a/Framework/Zerra.T4/Zerra.T4.csproj
+++ b/Framework/Zerra.T4/Zerra.T4.csproj
@@ -11,6 +11,8 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Company>KaKush LLC</Company>
     <Description>Tools for T4 files to use to generate code and client side libraries for CQRS.</Description>
+    <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, T4, Code Generation</PackageTags>
+    <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
