--- a/Framework/Zerra.CQRS.RabbitMessage/Zerra.CQRS.RabbitMessage.csproj
+++ b/Framework/Zerra.CQRS.RabbitMessage/Zerra.CQRS.RabbitMessage.csproj
@@ -15,7 +15,8 @@ Zerra.CQRS.RabbitMessage.RabbitMessageClient
 Zerra.CQRS.RabbitMessage.RabbitMessageServer</Description>
     <Company>KaKush LLC</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageTags>Framework, CQRS, Microservice, Repository, ORM, RabbitMQ</PackageTags>
+    <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, RabbitMQ</PackageTags>
+    <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
