--- a/Framework/Zerra.Logger/Zerra.Logger.csproj
+++ b/Framework/Zerra.Logger/Zerra.Logger.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
     <Authors>Steven Zawaski</Authors>
     <Copyright>KaKush LLC</Copyright>
     <Product>Zerra Framework</Product>
@@ -10,7 +10,9 @@
     <LangVersion>8.0</LangVersion>
     <Company>KaKush LLC</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageTags>Framework, CQRS, Microservice, Repository, ORM, Logging</PackageTags>
+    <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, Logging</PackageTags>
+    <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+    <Description>Basic Console and File Logging for the Zerra Framework for a quick start.  Ideally replaced with a custom implementation of ILoggingProvider and IMessageLogger later on.</Description>
   </PropertyGroup>
 
   <ItemGroup>
