--- a/Framework/Zerra.Repository/Zerra.Repository.csproj
+++ b/Framework/Zerra.Repository/Zerra.Repository.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
     <Authors>Steven Zawaski</Authors>
     <Copyright>KaKush LLC</Copyright>
     <Product>Zerra Framework Repository</Product>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <LangVersion>8.0</LangVersion>
-    <Description>Agnostic repository core library for the Zerra Framework.  Can switch between relational storage, document storage, and event storage without changing domain code.   This library will need a backing such as Zerra.Repository.Sql
+    <Description>Agnostic repository core library for the Zerra Framework.  Can switch between relational storage, document storage, and event storage without changing domain code.   This library will need a backing such as Zerra.Repository.Sql.MsSql or Zerra.Repository.EventStore.EventStoreDB
 
 Commonly used types:
 Zerra.Repository.Repo
@@ -29,6 +29,8 @@ Zerra.Repository.DataSourceTypeAttribute
 Zerra.Repository.IdentityAttribute</Description>
     <Company>KaKush LLC</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM</PackageTags>
+    <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
