--- a/Framework/Zerra.Web/Zerra.Web.csproj
+++ b/Framework/Zerra.Web/Zerra.Web.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
     <Company>KaKush LLC</Company>
     <Authors>Steven Zawaski</Authors>
     <Product>Zerra Framework Web</Product>
@@ -15,6 +15,8 @@ Commonly used types:
 Zerra.Web.CQRSMiddleware
 Zerra.Web.Logger
 Zerra.Web.CheckBoxList</Description>
+    <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+    <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, ASPNET, Web</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
