--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -1,6 +1,7 @@
 {
   "PetsSqlConnectionString": "Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;",
-  "LedgerSqlConnectionString": "Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;",
-  "LedgerEventStoreServer": "tcp://host.docker.internal:2113",
+  "Ledger1SqlConnectionString": "Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;",
+  "Ledger1EventStoreServer": "tcp://host.docker.internal:2113",
+  "Ledger2EventStoreServer": "tcp://host.docker.internal:2114",
   "LogFileDirectory": "C:\\Temp"
 }
