--- a/Framework/Zerra/Zerra.csproj
+++ b/Framework/Zerra/Zerra.csproj
@@ -27,6 +27,8 @@ Zerra.Linq.WhereBuilder
 Zerra.Reflection.TypeAnalyzer</Description>
     <Company>KaKush LLC</Company>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+    <Version>1.0.1</Version>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
