--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "PetsSqlConnectionString": "Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;",
-  "Ledger1SqlConnectionString": "Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;",
-  "Ledger1EventStoreServer": "tcp://host.docker.internal:2113",
-  "Ledger2EventStoreServer": "tcp://host.docker.internal:2114",
+  "PetsSqlConnectionString": "Data Source=.;Initial Catalog=ZerraDemoPets;Integrated Security=true",
+  "Ledger1SqlConnectionString": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
+  "Ledger1EventStoreServer": "127.0.0.1:2113",
+  "Ledger2EventStoreServer": "127.0.0.1:2113",
   "LogFileDirectory": "C:\\Temp"
 }
